--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,10 @@
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="app.css" />
 
+  <script src="lib/jquery/dist/jquery.min.js"></script>
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-route/angular-route.js"></script>
+  <script src="lib/angular-cookies/angular-cookies.js"></script>
 
   <script src="app.module.js"></script>
   <script src="app.config.js"></script>
@@ -17,7 +19,6 @@
 </head>
 <body>
 
-<!--    <login-form></login-form>-->
 <div ng-view></div>
 
 </body>
