--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <script src="app-services/message.service.js"></script>
 
     <script src="login/login.controller.js"></script>
+    <script src="home/home.controller.js"></script>
 </head>
 <body>
 
