--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="app" lang="en">
+<html lang="{{ lang }}" ng-app="app">
 <head>
   <meta charset="UTF-8">
   <title>Angular App</title>
